--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>The title</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
         <nav></nav>
         <main></main>
         <footer></footer>
     </body>
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
 </html>
