--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
             <div class="container">
-                <a href="#" class="navbar-brand">The Effects of Inequality</a>
+                <a href="#" class="navbar-brand">The Effects of Economic Inequality</a>
 
                 <div class="collapse navbar-collapse" id="navmenu">
                     <ul class="navbar-nav ms-auto">
@@ -34,7 +34,7 @@
     </header>
 
     <!-- Main -->
-    <main role="main" class="container">
+    <main id="charts" role="main" class="container p-4">
         <!-- Selector with the chart options -->
         <select id="image-selector" class="form-select" aria-label="Default select example"
             onchange="displayImage(this)">
@@ -52,6 +52,33 @@
             </div>
         </div>
     </main>
+
+    <!-- Rapport -->
+    <section id="rapport" class="p-5 bg-dark text-light">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md">
+                    <h2>Rapport</h2>
+                    <p class="lead">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Similique deleniti possimus magnam corporis ratione facere!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque
+                        reiciendis eius autem eveniet mollitia, at asperiores suscipit
+                        quae similique laboriosam iste minus placeat odit velit quos,
+                        nulla architecto amet voluptates?
+                    </p>
+                    <a href="#" class="btn btn-light mt-3">
+                        <i class="bi bi-chevron-right"></i> Read More
+                    </a>
+                </div>
+                <!-- <div class="col-md">
+                    <img src="" class="img-fluid" alt="" />
+                </div> -->
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
