--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>The title</title>
-        <link rel="stylesheet" href="css/index.css">
-    </head>
-    <body>
-        <nav></nav>
-        <main></main>
-        <footer></footer>
-    </body>
-    <script src="js/index.js"></script>
+<html lang="fr">
+
+<head>
+  <meta charset="utf-8">
+  <title>The title</title>
+  <link rel="stylesheet" href="css/index.css">
+</head>
+
+<body>
+  <nav></nav>
+  <main></main>
+  <footer></footer>
+  <script src="js/index.js"></script>
+</body>
+
 </html>
