Resolve "Afficher un fond de carte"

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,11 @@
     <!-- Visualisation -->
     <div id="visualisation">
       <p> Ici se trouve la heatmap et les graphes</p>
+      <div id="heatmap">
+        <div id="container">
+          <div id="map"></div>
+        </div>
+      </div>
     </div>
 
     <!-- Documentation -->
@@ -207,6 +212,8 @@
   </footer>
 
   <!-- Scripts -->
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="js/world-countries-no-antartica.js"></script>
   <script src="js/index.js"></script>
 </body>
 
