Resolve "Mettre en forme des données sur la carte"

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
 
     <!-- Visualisation -->
     <div id="visualisation" class="is-justify-content-center">
+      <button type="button" id="reset-zoom-button">Reset zoom</button>
       <div id="map"></div>
       <div id="selected-countries" class="is-justify-content-center field is-grouped is-grouped-multiline"></div>
     </div>
@@ -212,6 +213,7 @@
 
   <!-- Scripts -->
   <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="js/data.js"></script>
   <script src="js/world-countries-no-antartica.js"></script>
   <script src="js/country-selection-management.js"></script>
   <script src="js/notifications.js"></script>
