Resolve "Faire le lien entre la carte et les indicateurs"

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,7 @@
     <!-- Visualisation -->
     <div id="visualisation" class="is-justify-content-center">
       <button type="button" id="reset-zoom-button">Reset zoom</button>
+      <select name="indicators" id="indicators-select"></select>
       <div id="map"></div>
       <div id="selected-countries" class="is-justify-content-center field is-grouped is-grouped-multiline"></div>
     </div>
