--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,15 @@
       <div class="navbar-item">
         <img src="img/logo_ensimag_150.png" alt="Logo d'ENSIMAG" id="logo-ensimag">
       </div>
+
+      <a id="navbar-burger" class="navbar-burger" data-target="navbar">
+        <span></span>
+        <span></span>
+        <span></span>
+      </a>
     </div>
 
-    <div class="navbar-menu">
+    <div id="navbar" class="navbar-menu">
       <div class="navbar-start">
         <div class="navbar-item">
           Challenge Open Data
