--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Challenge Open Data</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/bulma/css/bulma.min.css">
+  <link rel="stylesheet" media="print" href="css/print.css">
+  <link rel="stylesheet" media="screen" href="css/index.css">
 </head>
 
 <body class="is-flex is-flex-direction-column">
@@ -228,7 +229,7 @@
   <script src="js/world-countries-no-antartica.js"></script>
 
   <!-- Scripts -->
-  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="js/d3/dist/d3.min.js"></script>
   <script src="js/country-selection-management.js"></script>
   <script src="js/indicators.js"></script>
   <script src="js/year-range.js"></script>
