Resolve "Mettre en forme des données dans des graphiques"

--- a/src/index.html
+++ b/src/index.html
@@ -75,8 +75,8 @@
 
       <!-- Selected countries -->
       <div id="selected-countries" class="is-justify-content-center field is-grouped is-grouped-multiline"></div>
-    
-      <!-- Graphes -->
+      <!-- Chart -->
+      <div id="chart"></div>
     </div>
 
     <!-- Documentation -->
@@ -250,9 +250,9 @@
   <script src="js/indicators.js"></script>
   <script src="js/year-range.js"></script>
   <script src="js/map.js"></script>
+  <script src="js/chart.js"></script>
   <script src="js/notifications.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/index.js"></script>
 </body>
-
 </html>
