--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Challenge Open Data</title>
-  <link rel="stylesheet" href="css/bulma/css/bulma.min.css">
+  <link rel="stylesheet" href="css/bulma.min.css">
   <link rel="stylesheet" href="css/bulma-slider.min.css">
   <link rel="stylesheet" media="print" href="css/print.css">
   <link rel="stylesheet" media="screen" href="css/index.css">
@@ -244,7 +244,7 @@
   <script src="js/world-countries-no-antartica.js"></script>
 
   <!-- Scripts -->
-  <script src="js/d3/dist/d3.min.js"></script>
+  <script src="js/d3.min.js"></script>
   <script src="js/bulma-slider.min.js"></script>
   <script src="js/country-selection-management.js"></script>
   <script src="js/indicators.js"></script>
