--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
     <!-- Visualisation -->
     <div id="visualisation" class="is-justify-content-center">
       <!-- Parameters -->
-      <div class="columns is-multiline">
+      <div class="columns is-multiline" id="parameters">
         <div class="column is-narrow">
           <button id="reset-zoom-button" type="button" class="button">Réinitialiser le zoom</button>
         </div>
